# rasa

./: .agnos-agent.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP-muharrir.md  audit.toml  bump-version.sh  docker-compose.yml
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  release-automation.yml  release.yml
config/: rasa.example.toml
crates/rasa-ai/: Cargo.toml
crates/rasa-ai/src/: apply.rs  client.rs  generation.rs  inpainting.rs  lib.rs  models.rs  pipeline.rs  provider.rs  provider_synapse.rs  registry.rs  segmentation.rs  upscaling.rs  workflow.rs
crates/rasa-core/: Cargo.toml
crates/rasa-core/src/: blend.rs  color.rs  command.rs  document.rs  error.rs  geometry.rs  layer.rs  lib.rs  pixel.rs  selection.rs  srgb_v2.icc  transform.rs  vector.rs
crates/rasa-core/tests/: serde_roundtrip.rs
crates/rasa-engine/: Cargo.toml
crates/rasa-engine/src/: brush.rs  compositor.rs  filter.rs  filter_builtins.rs  filters.rs  lib.rs  renderer.rs  text.rs  tools.rs  vector.rs
crates/rasa-gpu/: Cargo.toml
crates/rasa-gpu/src/: backend.rs  bench.rs  compositor.rs  device.rs  filters.rs  hw.rs  kernels.rs  lib.rs  pipeline.rs
crates/rasa-mcp/: Cargo.toml
crates/rasa-mcp/src/: intents.rs  lib.rs  main.rs  server.rs  state.rs  tools.rs
crates/rasa-storage/: Cargo.toml
crates/rasa-storage/src/: batch.rs  catalog.rs  export.rs  format.rs  icc.rs  import.rs  lib.rs  project.rs  psd.rs  raw.rs
crates/rasa-ui/: Cargo.toml
crates/rasa-ui/src/: app.rs  canvas.rs  lib.rs  panels.rs  plugin.rs  tool.rs  tool_builtins.rs  tools.rs
docker/: Dockerfile  Dockerfile.dev
docs/adr/: adr-008-text-engine.md  adr-009-parallel-compositing.md  adr-010-vector-tools.md  adr-011-ai-provider-abstraction.md  adr-012-tazama-integration.md
docs/architecture/: overview.md
docs/development/: roadmap.md  versioning.md
docs/guides/: ai-features.md  performance.md  tazama-integration.md  text-layers.md  vector-layers.md
