[workspace]
members = [
    "crates/rasa-core",
    "crates/rasa-gpu",
    "crates/rasa-engine",
    "crates/rasa-storage",
    "crates/rasa-ai",
    "crates/rasa-ui",
    "crates/rasa-mcp",
]
resolver = "2"

[workspace.package]
version = "2026.3.15"
edition = "2024"
authors = ["Robert MacCracken <robert@anomaly.co>"]
license = "AGPL-3.0"
repository = "https://github.com/agnostos/rasa"
rust-version = "1.85"

[workspace.dependencies]
# Font rasterization
ab_glyph = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (for AI inference API, MCP)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Image processing
image = "0.25"
psd = "0.3"
imagepipe = "0.5"
lcms2 = "6"

# GPU
wgpu = "24"
ash = "0.38"

# GUI
eframe = "0.31"
egui = "0.31"
rfd = "0.15"

# 2D geometry / bezier curves
kurbo = "0.13"

# Parallelism
rayon = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"

# Internal crates
rasa-core = { path = "crates/rasa-core" }
rasa-gpu = { path = "crates/rasa-gpu" }
rasa-engine = { path = "crates/rasa-engine" }
rasa-storage = { path = "crates/rasa-storage" }
rasa-ai = { path = "crates/rasa-ai" }
rasa-ui = { path = "crates/rasa-ui" }
rasa-mcp = { path = "crates/rasa-mcp" }
