[package]
name = "rasa-ai"
description = "AI inference pipeline: inpainting, upscaling, segmentation, generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rasa-core = { workspace = true }
rasa-engine = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
