[package]
name = "rasa-storage"
description = "File I/O: PNG, JPEG, TIFF, WebP, PSD, SVG, project format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rasa-core = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
