[package]
name = "rasa-ui"
description = "GUI: canvas viewport, tool palette, layer panel, properties"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rasa-core = { workspace = true }
rasa-engine = { workspace = true }
rasa-storage = { workspace = true }
rasa-ai = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rfd = { workspace = true }
muharrir = { workspace = true, features = ["notification", "selection", "inspector", "recent", "prefs", "expr", "hierarchy"] }
serde_json = { workspace = true }
